Tilføjet nye billeder af solvogn. Ændret størrelsen af KABSmad billeder. Skrevet afsnit om mad til KABS, mad på 45 minutter, rationelle løsninger (ol i ovn, solvogn) tilføjet billeder i appendix. Tilføjet new command \HM som laver med trademark
MANGLER:
Kommentar på teorien om kødpopularitet.

--- a/master.tex
+++ b/master.tex
@@ -31,6 +31,8 @@
   pdfsubject={Insert subject of assignment}}
 \usepackage{memhfixc}% rettelser til hyperref
 
+\newcommand{\HM}{Holy \& Moly\texttrademark \,}
+
 %%%%grafer
 \usepackage{tikz}
 \usepackage{pgfplots}
@@ -81,5 +83,5 @@
 
 \newpage
 \appendix
-
+\include{tex/app_kabsmad}
 \end{document}
