--- a/bibbase.bib
+++ b/bibbase.bib
@@ -10,6 +10,17 @@
     note = {\url{http://www.youtube.com/watch?v=BOyx24ixrXI}}
     }
 
+
+@misc{bib:url:Saltefanden,
+    author = {Casper \& Mandrilaftalen},
+    title = {Saltefanden},
+    howpublished = {Website},
+    year = {2009},
+    note = {\url{http://www.youtube.com/watch?v=CEetK3TLSy0}}
+    }
+    
+    
+
 @misc{bib:url:Finn:Pedo,
     author = {Casper \& Mandrilaftalen},
     title = {Gentleman Finn som pædofil},
@@ -145,7 +156,176 @@
     year = {2012},
     note = {\url{http://en.wikipedia.org/wiki/Bacon}}
     }
+    
+@misc{bib:url:oracleofbacon,
+    author = {The Oracle of Bacon},
+    title = {Oracle of Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://oracleofbacon.org/}}
+}  
 
+
+@misc{bib:url:kevinBacon,
+    author = {IMDB},
+    title = {Kevin Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.imdb.com/name/nm0000102/}}
+    }
+    
+@misc{bib:url:wikikevinBacon,
+    author = {Wikipedia},
+    title = {Kevin Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Kevin_Bacon}}
+    }
+    
+    
+@misc{bib:url:wikifrancisBacon,
+    author = {Wikipedia},
+    title = {Francis Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Francis_Bacon}}
+    }
+    
+    
+@misc{bib:url:wikiBaconisme,
+    author = {Wikipedia},
+    title = {Bacon Metoden},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Baconian_method}}
+    }
+    
+    
+@misc{bib:url:wikiRogerBacon,
+    author = {Wikipedia},
+    title = {Roger Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Roger_Bacon}}
+    }
+    
+   @misc{bib:url:wikiRogerBaconMethod,
+    author = {Wikipedia},
+    title = {Videnskabelig metoder},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Scientific_method}}
+    }
+
+
+   @misc{bib:url:wikiBaconCounty,
+    author = {Wikipedia},
+    title = {Bacon County},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Bacon_County,_Georgia}}
+}
+
+
+   @misc{bib:url:wikiAugustusBacon,
+    author = {Wikipedia},
+    title = {Augustus Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Augustus_Octavius_Bacon}}
+    }
+
+
+   @misc{bib:url:wikiReginaldBacon,
+    author = {Wikipedia},
+    title = {Reginald Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Reginald_Bacon}}
+}
+
+   @misc{bib:url:wikiJimBacon,
+    author = {Wikipedia},
+    title = {Jim Bacon},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Jim_Bacon}}
+}
+
+   @misc{bib:url:wikinsmb,
+    author = {Wikipedia},
+    title = {Nordsoe mine feltet},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/North_Sea_Mine_Barrage}}
+}
+
+
+   @misc{bib:url:baconsalt,
+    author = {Justin and Dave},
+    title = {Bacon Salt - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconsalt.php}}
+}
+
+   @misc{bib:url:baconranch,
+    author = {Justin and Dave},
+    title = {Bacon Ranch - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconranch.php}}
+}
+
+
+   @misc{bib:url:baconcroutons,
+    author = {Justin and Dave},
+    title = {Bacon croutons - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconcroutons.php}}
+}
+
+
+   @misc{bib:url:baconsovs,
+    author = {Justin and Dave},
+    title = {Bacon Gravy - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/bacongravy.php}}
+}
+   @misc{bib:url:baconnaise,
+    author = {Justin and Dave},
+    title = {Baconnaise - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconnaise.php}}
+}
+
+   @misc{bib:url:baconpop,
+    author = {Justin and Dave},
+    title = {Bacon Popcorn - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconpop.php}}
+}
+
+   @misc{bib:url:baconrub,
+    author = {Justin and Dave},
+    title = {Bacon rub - Everthing should taste like BACON},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://www.jdfoods.net/products/baconrub.php}}
+}
+
+   @misc{bib:url:baconmania,
+    author = Wikipedia},
+    title = {Bacon Mania},
+    howpublished = {Website},
+    year = {2012},
+    note = {\url{http://en.wikipedia.org/wiki/Bacon_mania}}
+    }
+    
 @misc{bib:url:WikiBeef,
     author = {Wikipedia},
     title = {Beef - Meat from a cow},
