--- a/tex/app_kabsmad.tex
+++ b/tex/app_kabsmad.tex
@@ -27,7 +27,7 @@
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.6\columnwidth]{/KABSmad/5}
-\caption{Altid vigtigt at have en saltefanden med}
+\caption{Altid vigtigt at have en saltefanden \cite{bib:url:Saltefanden} med}
 \end{figure}
 
 \begin{figure}[h!]
