--- a/tex/meat.tex
+++ b/tex/meat.tex
@@ -25,17 +25,16 @@ x tick label style={rotate=45,anchor=east},
 \end{axis}
 \end{tikzpicture}
 
-En nærmere undersøgelse viser dog tydeligt Bacons posistion som svinets mest elskede kød:
+En nærmere undersøgelse viser dog tydeligt Bacons position som svinets mest elskede kød:
 \begin{itemize}
 \item Bacon \cite{bib:url:WikiBacon}
 \item Flæskesteg \cite{bib:url:WikiRoastPork}
 \item Ham \cite{bib:url:WikiHam}
 \item Loin \cite{bib:url:WikiLoin}
-\item Spam \cite{bib:url:WikiSpam}
+\item Spam\footnote{Well, there's egg and bacon; egg sausage and bacon; egg and spam; egg bacon and spam; egg bacon sausage and spam; spam bacon sausage and spam; spam egg spam spam bacon and spam; spam sausage spam spam bacon spam tomato and spam; spam spam spam egg and spam; spam spam spam spam spam spam baked beans spam spam spam or Lobster Thermidor a Crevette with a mornay sauce served in a Provencale manner with shallots and aubergines garnished with truffle pate, brandy and with a fried egg on top and spam.} \cite{bib:url:WikiSpam}
 \item Spare Ribs \cite{bib:url:WikiSpareRibs}
 \item Mørbrad \cite{bib:url:WikiTenderLoin}
 \end{itemize}
-
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -53,4 +52,25 @@ x tick label style={rotate=45,anchor=east},
 \end{axis}
 \end{tikzpicture}
 
-SPAM\footnote{Well, there's egg and bacon; egg sausage and bacon; egg and spam; egg bacon and spam; egg bacon sausage and spam; spam bacon sausage and spam; spam egg spam spam bacon and spam; spam sausage spam spam bacon spam tomato and spam; spam spam spam egg and spam; spam spam spam spam spam spam baked beans spam spam spam or Lobster Thermidor a Crevette with a mornay sauce served in a Provencale manner with shallots and aubergines garnished with truffle pate, brandy and with a fried egg on top and spam.}
+
+Heraf ses klart hvor populært bacon er; meget. Dette har medført en stigende tendens hvor mennesker er blevet navngivet efter dette fantastiske stykke kød:
+
+\begin{itemize}
+\item Kevin Bacon, skuespiller kendt for at være centrum for Hollywood \cite{bib:url:oracleofbacon}, \cite{bib:url:kevinBacon}, \cite{bib:url:wikikevinBacon}
+\item Francis Bacon, Bagmanden bag den erkendelsesteori der nu kaldes empirisme, tidligere den baconske metode \cite{bib:url:wikifrancisBacon}, \cite{bib:url:wikiBaconisme}
+\item Roger Bacon, Videnskabsmand der undervister som en af de første i brugen af videnskabelige metoder indenfor forskning \cite{bib:url:wikiRogerBacon}, \cite{bib:url:wikiRogerBaconMethod}
+\item Bacon county - USA, opkaldt efter Augustus Bacon \cite{bib:url:wikiBaconCounty}, \cite{bib:url:wikiAugustusBacon}
+\item Reginal Bacon, Britisk Admiral beundret for sine tekniske færdigeheder i planlægning og udkæmpelse af såslag. \cite{bib:url:wikiReginaldBacon}, \cite{bib:url:wikinsmb}
+\item Jim Bacon\footnote{Det er ikke helt indlysende hvorfor der kun er mænd på listen, i Norge havde det dog været anderleders}, Premierminister for Tasmanien \cite{bib:url:wikiJimBacon}
+\end{itemize}
+
+Derudover er der "opfundet" følgende fantastiske madvarer:
+\begin{itemize}
+\item Bacon Salt \cite{bib:url:baconsalt}, \cite{bib:url:baconmania}
+\item Baconnaise \cite{bib:url:baconnaise}, \cite{bib:url:baconmania}
+\item Bacon Popcorn \cite{bib:url:baconpop}, \cite{bib:url:baconmania}
+\item Bacon Dipdressing \cite{bib:url:baconranch}, \cite{bib:url:baconmania}
+\item Bacon Sovs \cite{bib:url:baconsovs}, \cite{bib:url:baconmania}
+\item Bacon Krydderi \cite{bib:url:baconrub}, \cite{bib:url:baconmania}
+\item Bacon Croutons \cite{bib:url:baconcroutons}, \cite{bib:url:baconmania}
+\end{itemize}
