Rettet i bibbase da fejl. Ændret lidt opsætning. Klar til at blive sendt efter min mening

--- a/bibbase.bib
+++ b/bibbase.bib
@@ -319,7 +319,7 @@
 }
 
    @misc{bib:url:baconmania,
-    author = Wikipedia},
+    author = {Wikipedia},
     title = {Bacon Mania},
     howpublished = {Website},
     year = {2012},
