--- a/master.tex
+++ b/master.tex
@@ -66,8 +66,6 @@
 
 \include{tex/teori}
 
-\include{tex/meat}
-
 \include{tex/Skilz}
 
 \include{tex/erfaring}
@@ -78,7 +76,7 @@
 
 %End of the document, inserting bib and appendix
 \newpage
-\nocite{*}
+%\nocite{*}
 \printbibliography
 
 \newpage
