--- a/tex/erfaring.tex
+++ b/tex/erfaring.tex
@@ -77,7 +77,7 @@ x tick label style={rotate=45,anchor=east},
 \item Akademisk Råd (DTU) 2011-2012\cite{bib:url:Beret2011}
 \end{enumerate}
 
-\subsection{Hvad er Tha Bombs\texttrademark ikke}
+\subsection{Hvad er Tha Bombs\texttrademark \, ikke}
 \begin{enumerate}
 \item Pædofil \cite{bib:url:Finn:Pedo}
 \item Satan-tilbeder \cite{bib:url:Finn:Satan}
