--- a/tex/meat.tex
+++ b/tex/meat.tex
@@ -8,6 +8,7 @@ Herunder er de mest gængse kødprodukter listet efter popularitet i følge En u
 \item Svin (Pork) \cite{bib:url:WikiPork} - Kød der er en god bund i en fantastisk lagkage
 \end{itemize}
 
+\begin{center}
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -24,6 +25,7 @@ x tick label style={rotate=45,anchor=east},
 \addplot coordinates {(Beef,230000000) (Bacon,171000000) (Turkey,76100000) (Chicken,146000000) (Pork,463000000)};
 \end{axis}
 \end{tikzpicture}
+\end{center}
 
 En nærmere undersøgelse viser dog tydeligt Bacons position som svinets mest elskede kød:
 \begin{itemize}
@@ -35,6 +37,7 @@ En nærmere undersøgelse viser dog tydeligt Bacons position som svinets mest el
 \item Spare Ribs \cite{bib:url:WikiSpareRibs}
 \item Mørbrad \cite{bib:url:WikiTenderLoin}
 \end{itemize}
+\begin{center}
 \begin{tikzpicture}
 \begin{axis}[
 ybar,
@@ -51,7 +54,7 @@ x tick label style={rotate=45,anchor=east},
 \addplot coordinates {(Bacon,171000000) (Flaeskesteg,26500000) (Ham,34900000) (Loin,168000000) (Spam,19900000)(SpareRibs,4600000)(Tenderloin,50700000)};
 \end{axis}
 \end{tikzpicture}
-
+\end{center}
 
 Heraf ses klart hvor populært bacon er; meget. Dette har medført en stigende tendens hvor mennesker er blevet navngivet efter dette fantastiske stykke kød:
 
